# latex-pdf

./: .gitignore  Cargo.toml  buildwithzig.sh  math.tex
.cargo/: config.toml
src/: canny.rs  main.rs
work/: problem_0.tex
